ex00 finished without header

--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -11,16 +11,17 @@
 # **************************************************************************** #
 
 VAL 		:= valgrind -s --leak-check=full --show-leak-kinds=all
-RUN 		:= ./scalar_types
+RUN 		:= ./scalar_conversion
 
 GREEN 		:= \033[0;32m
 RED 		:= \033[0;31m
 RESET_COL 	:= \033[0m
 
-NAME 		:= scalar_types
+NAME 		:= scalar_conversion
 CC 			:= c++
 CFLAGS 		:= -Wall -Werror -Wextra -std=c++98
 SRC 		:=	main.cpp \
+				ScalarConverter.cpp
 
 all: $(NAME)
 
