ex01 finished without header

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -21,6 +21,7 @@ NAME 		:= serialization
 CC 			:= c++
 CFLAGS 		:= -Wall -Werror -Wextra -std=c++98
 SRC 		:=	main.cpp \
+				Serializer.cpp
 
 all: $(NAME)
 
